--- a/styles/style.css
+++ b/styles/style.css
@@ -1,26 +1,27 @@
 .background{
-    /* display: flex; */
+   
     background-image: url('/Images/Banner\ Image.png');
     margin: 30px 100px;
     background-repeat: no-repeat;
     width: 1320px;
     height: 600px
+    
 }
 
 #para{
-color: #d6d0d0;
+color: white;
 text-align: center;
 font-family: Merriweather;
 font-size: 20px;
 font-style: normal;
 font-weight: 900;
-line-height: normal;
+line-height: 0.1;
 padding: 150px 200px 0 150px;
 }
 
 
 .header1{
-    color: #d6d0d0;
+    color: white;
 text-align: center;
 font-family: Merriweather;
 font-size: 50px;
@@ -61,17 +62,46 @@ font-weight: 700; /*  dicount part end */
     color: #FFF;
 font-family: Merriweather;
 font-size: 34px;
-font-style: normal;
-font-weight: 900;
-line-height: 88px; 
+font-weight: 600;
 letter-spacing: 6.04px;
-text-align: center;
+text-align: left;
+padding-left: 80px;
 }
 
 .background2{
     background-image: url('/Images/Vectorrr.png');
     width: 1320px;
 height: 600px;
-flex-shrink: 0;
 margin-left: 150px;
+display: inline-block;
+
 }
+
+#para2{
+color: white;
+font-family: Inter;
+font-size: 18px;
+font-weight: 400;
+line-height: 30px;
+padding-left: 80px;
+width: 697px;
+}
+
+.join{
+    display: inline-flex;
+padding: 16px 32px;
+justify-content: center;
+align-items: center;
+gap: 10px;
+border-radius: 8px;
+background: #F00;
+margin-left: 80px;
+
+color: #FFF;
+text-align: center;
+font-family: Inter;
+font-size: 12px;
+font-weight: 700;
+text-transform: uppercase;
+}
+
