--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 .background{
    
-    background-image: url('/Images/banner-image.png');
+    background-image: url('/imgs/banner-image.png');
     margin: 30px 100px;
     background-repeat: no-repeat;
     width: 1320px;
@@ -69,7 +69,7 @@ padding-left: 80px;
 }
 
 .background2{
-    background-image: url('/Images/vector.png');
+    background-image: url('/imgs/vector.png');
     width: 1320px;
 height: 600px;
 margin-left: 150px;
