--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,8 @@
     padding: 0;
 }
 
+/* first banner */
+
 .background{
    
     border-radius: 16px;
@@ -24,8 +26,6 @@ font-weight: 900;
 line-height: 0.1;
 padding: 150px 200px 0 150px;
 }
-
-
 .header1{
     color: white;
 text-align: center;
@@ -33,8 +33,6 @@ font-family: Merriweather;
 font-size: 50px;
 font-weight: 900;
 }
-
-
 /* main body starts */
 
 .discount{
@@ -141,4 +139,70 @@ padding: 5px;
 div  span{
     color: #F00;
 }
+/* Coming soon banner CSS */
 
+#coming-sec {
+    display: flex; 
+    margin-top: 30px; 
+    padding-left: 140px; 
+    justify-content: space-around; 
+    width: 1320px;
+}
+
+#offer{
+    color: #F00;
+    text-align: center;
+    font-family: Inter;
+    font-size: 17px;
+    font-weight: 500;
+    width: 150px;
+    padding-bottom: 5px;
+}
+
+#soonh2{
+color: #070211;
+font-family: Merriweather;
+font-size: 30px;
+font-weight: 900;
+text-transform: capitalize;
+width: 250px;
+padding-bottom: 10px;
+}
+
+#exiting{
+    color: rgba(7, 2, 17, 0.60);
+
+font-family: Inter;
+font-size: 20px;
+font-weight: 400;
+width: 430px;
+}
+
+.best-img{
+border: 12px solid #F00;
+padding: 15px;
+border-radius: 364.844px;
+
+}
+
+.best-img img {
+    max-width: 100%;
+  width: 250px;
+}
+
+#year{
+color: #F00;
+font-family: Inter;
+font-size: 20px;
+font-weight: 700;
+}
+
+#thrlli{
+color: rgba(7, 2, 17, 0.60);
+font-family: Inter;
+font-size: 20px;
+font-weight: 400;
+width: 320px;
+}
+
+/* New offer section close */
