--- a/styles/style.css
+++ b/styles/style.css
@@ -206,3 +206,43 @@ width: 320px;
 }
 
 /* New offer section close */
+
+/* Hodiday sale 50% */
+
+#banner3{
+    text-align: center; 
+    margin-top: 50px; 
+    padding-left: 140px; 
+    width: 1320px;
+}
+
+#functional{
+color: #070211;
+font-family: Inter;
+font-size: 20px;
+font-weight: 500;
+}
+
+#holiday{
+    color: #070211;
+font-family: Merriweather;
+font-size: 50px;
+font-weight: 900;
+}
+
+#holiday1{
+color: #F00;
+text-align: center;
+font-family: Merriweather;
+font-size: 50px;
+font-weight: 900;
+}
+
+#explore{
+color: rgba(7, 2, 17, 0.60);
+font-family: Inter;
+font-size: 20px;
+font-weight: 500;
+line-height: 32px;
+
+}
