--- a/styles/style.css
+++ b/styles/style.css
@@ -211,7 +211,7 @@ width: 320px;
 
 #banner3{
     text-align: center; 
-    margin-top: 50px; 
+    margin-top: 80px; 
     padding-left: 140px; 
     width: 1320px;
 }
@@ -245,4 +245,31 @@ font-size: 20px;
 font-weight: 500;
 line-height: 32px;
 
+}
+
+/* Our awesome portfolio */
+
+
+#besg{
+color: #F00;
+font-family: Inter;
+font-size: 24px;
+font-weight: 500;
+}
+
+#oura{
+color: #070211;
+font-family: Merriweather;
+font-size: 35px;
+font-weight: 900;
+text-transform: capitalize;
+}
+
+#introo{
+color: rgba(7, 2, 17, 0.60);
+font-family: Inter;
+font-size: 20px;
+font-weight: 400;
+line-height: 32px;
+width: 896px;
 }
