--- a/styles/style.css
+++ b/styles/style.css
@@ -386,3 +386,5 @@ font-weight: 500;
 #uns h3{
     /* padding-right: 200px; */
 }
+
+/* I worked so hard on this. I work in night shift. Letely, I am sleeping very less about 3-4 hours everyday. I know made a lot of mistakes. But I finished my first web dev assignment. Thank you programming hero team */
